Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,6 +450,7 @@
    ],
    "source": [
     "pyeongchang_values = list(cities[-1].values())\n",
+    "type()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
