--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(citi)\n",
+    "pyeongchang_keys = list(cities[-1].keys())\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
