--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[-1].values())\n",
+    "pyeongchang_values =(cities[-1].values())\n",
     "type(pyeongchang_values)\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
@@ -465,9 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_keys = list(cities[-1].keys())\n",
     "\n",
