--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
    ],
    "source": [
     "pyeongchang_values = list(cities[-1].values())\n",
-    "type(pyeongchang_values)\n",
+    "type(pyeongchang_values\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -474,13 +474,13 @@
        "list"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_keys = list(cities[-1].keys())\n",
+    "pyeongchang_keys = list(cities[-1])\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
