--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = list(cities[-1].)\n",
+    "pyeongchang_keys = list(cities[-1].keys)\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
