--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = 84554  # change None\n",
+    "greenville_population = green  # change None\n",
     "greenville_population # 84554"
    ]
   },
